@@ -63,6 +63,7 @@ namespace std
       case 0:
       case 1:
 	// 1 The sign precedes the value and symbol.
+	__ret.field[0] = sign;
 	if (__space)
 	  {
 	    // Pattern starts with sign.
@@ -76,7 +77,6 @@ namespace std
 		__ret.field[1] = value;
 		__ret.field[3] = symbol;
 	      }
-	    __ret.field[0] = sign;
 	    __ret.field[2] = space;
 	  }
 	else
@@ -92,7 +92,6 @@ namespace std
 		__ret.field[1] = value;
 		__ret.field[2] = symbol;
 	      }
-	    __ret.field[0] = sign;
 	    __ret.field[3] = none;
 	  }
 	break;
@@ -104,15 +103,14 @@ namespace std
 	    if (__precedes)
 	      {
 		__ret.field[0] = symbol;
-		__ret.field[1] = space;
 		__ret.field[2] = value;
 	      }
 	    else
 	      {
 		__ret.field[0] = value;
-		__ret.field[1] = space;
 		__ret.field[2] = symbol;
 	      }
+	    __ret.field[1] = space;
 	    __ret.field[3] = sign;
 	  }
 	else
