@@ -1,5 +1,10 @@
 2003-11-22  Paolo Carlini  <pcarlini@suse.de>
 
+	* config/locale/gnu/monetary_members.cc
+	(money_base::_S_construct_pattern): Factor out two assignments.
+
+2003-11-22  Paolo Carlini  <pcarlini@suse.de>
+
 	* include/bits/istream.tcc (getline(basic_string<>&)):
         Fix error in comment of the previous commit.
 
